version 2.0 fixing bugs, code polishing